--- a/rendering-5.vcxproj
+++ b/rendering-5.vcxproj
@@ -786,6 +786,8 @@
     <None Include="include\glm\gtx\wrap.inl" />
     <None Include="src\shaders\basic.frag" />
     <None Include="src\shaders\basic.vert" />
+    <None Include="src\shaders\fbo_edge.frag" />
+    <None Include="src\shaders\fbo.vert" />
     <None Include="src\shaders\light.frag" />
     <None Include="src\shaders\light.vert" />
     <None Include="src\shaders\phong.frag" />
@@ -794,6 +796,7 @@
     <None Include="src\shaders\skybox.vert" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="basic.txt" />
     <Text Include="src\animation-data.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
